Correção da CDN
Correção das URLs da CDN

--- a/geral-azul.css
+++ b/geral-azul.css
@@ -1,5 +1,5 @@
-@import url('https://cdn.jsdelivr.net/gh/ServTECTelecom/ServJelly@refs/heads/main/base.css');
-@import url('https://cdn.jsdelivr.net/gh/ServTECTelecom/ServJelly@refs/heads/main/addons/logo.css');
-@import url('https://cdn.jsdelivr.net/gh/ServTECTelecom/ServJelly@refs/heads/main/addons/cabecalho.css');
-@import url('https://cdn.jsdelivr.net/gh/ServTECTelecom/ServJelly@refs/heads/main/addons/jf-azul.css');
+@import url('https://cdn.jsdelivr.net/gh/ServTECTelecom/ServJelly/base.css');
+@import url('https://cdn.jsdelivr.net/gh/ServTECTelecom/ServJelly/addons/logo.css');
+@import url('https://cdn.jsdelivr.net/gh/ServTECTelecom/ServJelly/addons/cabecalho.css');
+@import url('https://cdn.jsdelivr.net/gh/ServTECTelecom/ServJelly/addons/jf-azul.css');
 
